# lecture-to-audio_V2

./: .env  .gitignore  README.md  ngrok_recovery.rtf  pyproject.toml
app/: chunking.py  config.py  db.py  lectures.py  main.py  rate_limit.py  realtime.py  schemas.py
app/pipeline/: analyze_pdf.py  ingest.py  rss.py  script_writer.py  tts.py  worker.py
app/static/: index.html
app/storage/: base.py  local.py
data/: lecture_to_audio.db
data/extracted/: 079209271ee14439b86fa4d714f1158b_chunks.json  75a24f1841e441eb9ce6be0e33f653fe_chunks.json  cd19df8c69d048b1a6e33f2dc8382f48_chunks.json  eac6bf5de2ba42189fd163d35fd77765_chunks.json
data/rss/: feed.xml
data/scripts/: 079209271ee14439b86fa4d714f1158b_lecture_script.json  75a24f1841e441eb9ce6be0e33f653fe_lecture_script.json  bcfc62d1f64d481a80e29651ede6da35_lecture_script.json  cd19df8c69d048b1a6e33f2dc8382f48_lecture_script.json  eac6bf5de2ba42189fd163d35fd77765_lecture_script.json
ios/LectureStream/: Build LectureStream_2026-02-04T08-41-04.txt  README.md
ios/LectureStream/LectureStream/: Info.plist  LectureStreamApp.swift  Models.swift
ios/LectureStream/LectureStream.xcodeproj/: project.pbxproj
ios/LectureStream/LectureStream/Intents/: InterruptLectureIntent.swift
ios/LectureStream/LectureStream/Networking/: APIClient.swift
lecture_to_audio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_chunk_context.py  test_job_state.py  test_realtime_token.py  test_rss.py  test_schemas.py
tools/: cli.py  drop_upload_server.py  process_and_upload.py
(+15 files in other folders)
